--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
+    "pg-pool": "^3.6.2",
     "socket.io": "^4.7.5"
   }
 }
