--- a/server/package.json
+++ b/server/package.json
@@ -20,11 +20,16 @@
     "nodemon": "^3.1.2"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
+    "express-validator": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "pg-pool": "^3.6.2",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "uuid": "^9.0.1"
   }
 }
